--- a/style.css
+++ b/style.css
@@ -2,27 +2,18 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,400;10..48,500;10..48,600;10..48,700;10..48,800&display=swap");
 
-
-
-
-
-
-
-
-
 body,
 * {
-
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
   font-family: "Bricolage Grotesque", sans-serif;
 }
 
-
 .slideImage {
   display: none;
-  width: 100vw;
+  width: 100%;
   object-fit: cover;
 }
 
@@ -39,80 +30,75 @@ body,
   border-radius: 5px;
 }
 
-.ourServices{
-    background: linear-gradient(to right,#F36DB8,#33031E);
-   
-
+.ourServices {
+  background: linear-gradient(to right, #f36db8, #33031e);
 }
-
-
 
 /* menu animation */
 
+#menuList {
+  background: #76174d;
+  padding: 5rem 0;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  height: 100vh;
+  position: fixed;
+  right: 0;
+  transition-timing-function: cubic-bezier(10, 2, 3, 1);
+  transform: translateX(50rem);
+  top: 0;
+  z-index: 0;
+  transition: 0.5s;
+}
 
-  #menuList {
-      background: #76174d;
-      padding:5rem 0;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 50%;
-      height: 100vh;
-      position: fixed;
-      right: 0;
-      transition-timing-function: cubic-bezier(10,2,3,1);
-      transform: translateX(50rem);
-      top: 0;
-      z-index: 0;
-      transition: 0.5s;
-  }
+#menuList,
+a {
+  margin-bottom: 2rem;
+}
+#menyAvPaa {
+  display: none;
+}
 
-  #menuList ,a{
-    margin-bottom: 2rem     ;
-  }
-  #menyAvPaa {
-      display: none;
-  }
-  
-  #menyAvPaa:checked ~ #menuList {
-      transform: translateX(0rem);
-  }
-  
-  #menuInput {
-      position: absolute;
-      cursor: pointer;
-      width: 2rem;
-      height: 1.6rem;
-      right: 1rem;
-      top: 1rem;
-      display: flex;
-      justify-content: space-between;
-      flex-direction: column;
-  }
-  
-  #menuInput > div {
-      height: 2px;
-      background-color: #000;
-      transition: 0.5s;
-      z-index: 999;
-  }
-  
-  #menyAvPaa:checked ~ #menuInput > div {
-    background-color: #fff;
-  }
-  
-  #menyAvPaa:checked ~ #menuInput > div:nth-child(1) {
-      transform: translateY(15px) rotate(50deg);
-      /* background-color: red; */
-  }
-  #menyAvPaa:checked ~ #menuInput > div:nth-child(2) {
-      opacity: 0;
-  }
-  #menyAvPaa:checked ~ #menuInput > div:nth-child(3) {
-      transform: translateY(-10px) rotate(-50deg);
-  }
-  
+#menyAvPaa:checked ~ #menuList {
+  transform: translateX(0rem);
+}
+
+#menuInput {
+  position: absolute;
+  cursor: pointer;
+  width: 2rem;
+  height: 1.6rem;
+  right: 1rem;
+  top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+#menuInput > div {
+  height: 2px;
+  background-color: #000;
+  transition: 0.5s;
+  z-index: 999;
+}
+
+#menyAvPaa:checked ~ #menuInput > div {
+  background-color: #fff;
+}
+
+#menyAvPaa:checked ~ #menuInput > div:nth-child(1) {
+  transform: translateY(15px) rotate(50deg);
+  /* background-color: red; */
+}
+#menyAvPaa:checked ~ #menuInput > div:nth-child(2) {
+  opacity: 0;
+}
+#menyAvPaa:checked ~ #menuInput > div:nth-child(3) {
+  transform: translateY(-10px) rotate(-50deg);
+}
 
 /* media query @ 775px */
 @media only screen and (min-width: 775px) {
